2004-03-01  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Implemented bi-linear filtering for displacement
	map. The algorithm is still pretty crap but it makes it look a lot
	better than it did before.
	
2004-02-29  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: Added new filter: feDisplacementMap

	
2004-02-28  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-text.c: Made standard text the default. Vector text was 
	annoying me.
	* rsvg-filter.c: Fixed a segfault in feComponentTransfer

2004-02-28  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c: made filters render before opacity is taken care of, 
	this seems like the official way it is done
	* rsvg-filter.c: fixed a few problem with coordinate units and 
	dimentions
	
2004-02-27  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c: implemented the "enable-background" style value.
	This allows backgrounds to be used by filters even when they are
	are based on multiple opacity levels. It also allows one to specify
	exactly how many levels of groups one wants to be included in the 
	background.

2004-02-19  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c, rsvg-styles.h: Changed "opacity groups" into 
	"discrete layers" which are like opacity groups but handle filters
	as well as opacity groups and will eventually handle masks. This fixes 
	bugs relating to transperency and filters being used at the same time.

	* rsvg-filter.c: fixed a couple of little bugs relating to gaussian 
	blurs with a standard deviation less than 1 in an axis, it will now 
	just ommit blurring in this axis, saving us time. Also disabled perfect
	blurs because they are really quite silly most of the time, Dom was 
	right.

2004-02-18  Brian Koebbe  <brian@koebbe.org>

	* rsvg-css.c (rsvg_css_parse_list): fix a loop run amuck (#134801)

2004-02-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* rsvg-gz.c: (rsvg_handle_gz_close_impl):